--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Công cụ chuyển đổi hình ảnh từ Fii Media</title>
+  <title>Document</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/ratchet/2.0.2/css/ratchet.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.4/dist/sweetalert2.all.min.js"></script>
 </head>
 <style>
-  .container {
-  width: 800px;
-  margin: 0;
-}
-
-
   body {
     display: flex;
     align-items: center;
@@ -57,15 +51,26 @@
   }
 
   @media only screen and (max-width: 600px) {
-  .container {
-    width: 90%;
+
+    body {
+      display: flex;
+      align-items: flex-start;
+    }
+
+    .container {
+      width: 90%;
+      display: flex;
+    }
+
+
   }
-}
 </style>
 
 <body>
   <div class="container">
-    <img src="https://scontent.fsgn5-10.fna.fbcdn.net/v/t39.30808-6/309706511_109670281919963_7138857053275855256_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=uiqMm7ilmHgAX-jcuRg&tn=SY7ktdkvLAbzGZqs&_nc_ht=scontent.fsgn5-10.fna&oh=00_AfCI9IQUEt5gXrFjdQfH5K9O00L0EPpegoev19A_JIvshA&oe=63E355C9" alt="" width="300px">
+    <img
+      src="https://scontent.fsgn5-10.fna.fbcdn.net/v/t39.30808-6/309706511_109670281919963_7138857053275855256_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=uiqMm7ilmHgAX-jcuRg&tn=SY7ktdkvLAbzGZqs&_nc_ht=scontent.fsgn5-10.fna&oh=00_AfCI9IQUEt5gXrFjdQfH5K9O00L0EPpegoev19A_JIvshA&oe=63E355C9"
+      alt="" width="300px">
 
     <label for="fileInput" class="btn btn-primary btn-block btn-outlined">Chọn ảnh cần đổi định dạng</label>
     <input type="file" id="fileInput" style="display: none">
@@ -122,7 +127,7 @@
         });
         return;
       }
-      
+
 
       const canvas = document.createElement('canvas');
       const ctx = canvas.getContext('2d');
