--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
   .container {
     width: 800px;
+    height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
   }
 
   #fileInput,
@@ -58,7 +59,7 @@
     }
 
     .container {
-      width: 90%;
+      width: 90vw;
       display: flex;
     }
 
