--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Công cụ chuyển đổi hình ảnh Fii Media</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/ratchet/2.0.2/css/ratchet.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.4/dist/sweetalert2.all.min.js"></script>
 </head>
@@ -19,7 +19,6 @@
 
   .container {
     width: 800px;
-    height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -60,7 +59,6 @@
 
     .container {
       width: 80%;
-      display: flex;
     }
 
 
@@ -71,7 +69,7 @@
   <div class="container">
     <img
       src="https://scontent.fsgn5-10.fna.fbcdn.net/v/t39.30808-6/309706511_109670281919963_7138857053275855256_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=uiqMm7ilmHgAX-jcuRg&tn=SY7ktdkvLAbzGZqs&_nc_ht=scontent.fsgn5-10.fna&oh=00_AfCI9IQUEt5gXrFjdQfH5K9O00L0EPpegoev19A_JIvshA&oe=63E355C9"
-      alt="" width="100px">
+      alt="" width="150px">
 
     <label for="fileInput" class="btn btn-primary btn-block btn-outlined">Chọn ảnh cần đổi định dạng</label>
     <input type="file" id="fileInput" style="display: none">
