--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <style>
   body {
     display: flex;
+    height: auto;
     align-items: center;
     justify-content: center;
     background: linear-gradient(to right, #4f00bc, #29abe2);
@@ -19,6 +20,7 @@
 
   .container {
     width: 800px;
+    height: auto;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -73,7 +75,7 @@
 
     <label for="fileInput" class="btn btn-primary btn-block btn-outlined">Chọn ảnh cần đổi định dạng</label>
     <input type="file" id="fileInput" style="display: none">
-    <img id="imgDisplay" style="display: none; max-width: 60%;" />
+    <img id="imgDisplay" style="display: none; max-width: 100%;" />
 
 
 
