--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     </select>
 
     <button id="convertBtn" class="convert-btn">Chuyển đổi</button>
-
-<input type="file" id="pdfInput" accept=".pdf">
-  <button onclick="convertToImage()">Chuyển đổi thành Ảnh</button>
+  <h1>File PDF chuyển thành ảnh</h1>
+<input type="file" id="pdfInput" class="file-input" accept=".pdf">
+  <button id="convertBtn" onclick="convertToImage()">Chuyển đổi thành Ảnh</button>
   <canvas id="pdfCanvas"></canvas>
   </div>
 
