--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     </select>
 
     <button id="convertBtn" class="convert-btn">Chuyển đổi</button>
-  <h1>File PDF chuyển thành ảnh</h1>
-<input type="file" id="pdfInput" class="file-input" accept=".pdf">
+  <h1>PDF to PNG </h1>
+<input type="file" id="pdfInput" accept=".pdf">
   <button id="convertBtn" onclick="convertToImage()">Chuyển đổi thành Ảnh</button>
   <canvas id="pdfCanvas"></canvas>
   </div>
