--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     canvas {
       border: 1px solid #ddd;
       margin-top: 10px;
+      width: 200px;
     }
 
     .container {
@@ -112,8 +113,9 @@
 
     <button id="convertBtn" class="convert-btn">Chuyển đổi</button>
   <h1>PDF to PNG </h1>
-<input type="file" id="pdfInput" accept=".pdf">
-  <button id="convertBtn" onclick="convertToImage()">Chuyển đổi thành Ảnh</button>
+  <label for="pdfInput" class="file-label">Upload File</label>
+  <input type="file" id="pdfInput" accept=".pdf">
+  <button id="convertBtn" class="convert-btn" onclick="convertToImage()">Convert PNG</button>
   <canvas id="pdfCanvas"></canvas>
   </div>
 
