--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     canvas {
       border: 1px solid #ddd;
       margin-top: 10px;
-      width: 200px;
+      width: 400px;
     }
 
     .container {
@@ -114,7 +114,7 @@
     <button id="convertBtn" class="convert-btn">Chuyển đổi</button>
   <h1>PDF to PNG </h1>
   <label for="pdfInput" class="file-label">Upload File</label>
-  <input type="file" id="pdfInput" accept=".pdf">
+  <input type="file" id="pdfInput" class="file-input" accept=".pdf">
   <button id="convertBtn" class="convert-btn" onclick="convertToImage()">Convert PNG</button>
   <canvas id="pdfCanvas"></canvas>
   </div>
