--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     canvas {
       border: 1px solid #ddd;
       margin-top: 10px;
-      width: 400px;
+      width: 100%;
     }
 
     .container {
@@ -86,6 +86,7 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      width: 100%;
     }
 
     .convert-btn:hover {
