--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       border: 1px solid #ddd;
       margin-top: 10px;
       width: 100%;
+      height: 100px;
     }
 
     .container {
@@ -46,6 +47,7 @@
       margin-bottom: 20px;
       border-radius: 5px;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      height: 100px;
     }
 
     .file-label {
